--- a/01-thymeleaf-demo/src/main/resources/templates/helloworld.html
+++ b/01-thymeleaf-demo/src/main/resources/templates/helloworld.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Thymeleaf Demo</title>
+
+        <!--Reference CSS file-->
+        <link rel="stylesheet" th:href="@{/css/demo.css}">
     </head>
     <body>
-        <p th:text="'Time on the server is: ' + ${date} "></p>
+        <p class="funny" th:text="'Time on the server is: ' + ${date} "></p>
     </body>
 </html>
