--- a/01-thymeleaf-demo/src/main/resources/templates/list-employees.html
+++ b/01-thymeleaf-demo/src/main/resources/templates/list-employees.html
@@ -14,24 +14,26 @@
         <title>Employee Directory</title>
     </head>
     <body>
-        <h3>Employee Directory</h3>
-        <hr>
+        <div class="container">
+            <h3>Employee Directory</h3>
+            <hr>
 
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="employee: ${employees}">
-                    <td th:text="${employee.firstName}"></td>
-                    <td th:text="${employee.lastName}"></td>
-                    <td th:text="${employee.email}"></td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="table table-bordered table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="employee: ${employees}">
+                        <td th:text="${employee.firstName}"></td>
+                        <td th:text="${employee.lastName}"></td>
+                        <td th:text="${employee.email}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
