--- a/02-crud-mvc/src/main/resources/templates/employees/list-employees.html
+++ b/02-crud-mvc/src/main/resources/templates/employees/list-employees.html
@@ -27,6 +27,7 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -34,6 +35,20 @@
                         <td th:text="${employee.firstName}"></td>
                         <td th:text="${employee.lastName}"></td>
                         <td th:text="${employee.email}"></td>
+
+                        <!--Add update button/link-->
+                        <!--<td>
+                            <a th:href="@{/employess/showFormForUpdate(employeeId=${employee.id})}"
+                               class="btn btn-info btn-sm">
+                                Update
+                            </a>
+                        </td>-->
+                        <td>
+                            <form action="#" th:action="@{/employees/showFormForUpdate}" method="post">
+                                <input type="hidden" name="employeeId" th:value="${employee.id}"/>
+                                <button type="submit" class="btn btn-info btn-sm">Update</button>
+                            </form>
+                        </td>
                     </tr>
                 </tbody>
             </table>
